syntax = "proto3";

option csharp_namespace = "Shared.GrpcServices";

message GetAvailableClassesRequest {
  int64 telegramId = 1;
}

message GetAvailableClassesReply {
  repeated ClassInformation classInformation = 1;
  bool isFailed = 2;
  string errorMessage = 3;
}
message ClassInformation {
  int32 id = 1;
  string name = 2;
  int64 classDateUnixTimestamp = 3;
}

message EnqueueInClassRequest {
  int64 telegramId = 1;
  int32 classId = 2;
}
message EnqueueInClassReply {
  repeated string studentsQueue = 1;
  bool wasAlreadyEnqueued = 2;
  ClassInformation class = 3;
  bool isFailed = 4;
  string errorMessage = 5;
}

message DequeueFromClassRequest {
  int64 telegramId = 1;
  int32 classId = 2;
}
message DequeueFromClassReply {
  repeated string studentsQueue = 1;
  bool wasAlreadyDequeuedFromClass = 2;
  ClassInformation class = 3;
  bool isFailed = 4;
  string errorMessage = 5;
}

message ViewQueueClassRequest {
  int32 classId = 1;
}
message ViewQueueClassReply {
  repeated string studentsQueue = 1;
  ClassInformation class = 2;
  bool isFailed = 3;
  string errorMessage = 4;
}

message SetAvailableClassesRequest {
  string groupName = 1;
  map<string, int64> classes = 2;
}